| Bug #61147 | ndb_mgmd incorrectly reports failure when stopping other ndb_mgmd | ||
|---|---|---|---|
| Submitted: | 12 May 2011 9:29 | Modified: | 13 May 2011 11:52 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[12 May 2011 9:29]
Jonas Oreland
[12 May 2011 9:31]
Jonas Oreland
http://lists.mysql.com/commits/137177 Fix pushed to 7.0.25 and 7.1.14
[13 May 2011 11:52]
Jon Stephens
Documented as follows in the NDB-7.0.25 and 7.1.14 changelogs:
When using two management servers, issuing in an ndb_mgm client
connected to one management server a STOP command for stopping
the other management server caused Error 2002 (Stop failed ...
Send to process or receive failed.: Permanent error: Application
error), even though the STOP command actually succeeded.
Closed.
