ndb - bug#61147 - fix stop of other ndb_mgmd incorrectly reporting failure